@@ -11,7 +11,16 @@
 
 ### Docker Run
 ```shell
-docker run -p 8080:8080 -v ./target/data-service-0.0.1-SNAPSHOT.jar:/data/app.jar -v ./config:/data/config -v ./logs:/data/logs --env JVM_XMS=2g --env JVM_XMX=2g --env JVM_XMN=1g --env JVM_MS=128m --env JVM_MMS=320m --name projectname bincent/openjdk:1.8 
+docker run -p 8080:8080 \
+  -v ./target/data-service-0.0.1-SNAPSHOT.jar:/data/app.jar \
+  -v ./config:/data/config \
+  -v ./logs:/data/logs \
+  --env JVM_XMS=1024m \
+  --env JVM_XMX=1024m \
+  --env JVM_XMN=256m \
+  --env JVM_MS=256m \
+  --env JVM_MMS=256m \
+  --name projectname bincent/openjdk:1.8 
 ```
 
 ### Docker Composer
@@ -25,9 +34,9 @@ services:
     container_name: java
     restart: always
     environment: # 默认配置
-      - TIME_ZONE: "Asia/Shanghai"
-      - BASE_DIR: "/data"   # 注意：修改此路径，需同步修改volumes对应路径
-      - JAVA_OPTS: -Xms2g -Xmx2g -Xmn1g -XX:MetaspaceSize=128m -XX:MaxMetaspaceSize=320m # JAVA启动参数
+      TIME_ZONE: Asia/Shanghai
+      BASE_DIR: /data   # 注意：修改此路径，需同步修改volumes对应路径
+      JAVA_OPTS: -XX:MetaspaceSize=128m -XX:MaxMetaspaceSize=128m -Xms1024m -Xmx1024m -Xmn256m -Xss256k -XX:SurvivorRatio=8 -XX:+UseConcMarkSweepGC # JAVA启动参数
     volumes:
       - ./logs:/data/logs
       - ./config:/data/config:ro
